--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -42,9 +42,10 @@ $c-border: lighten( $quill, 4% )
 $c-border-invert: rgba( $white, 0.1 )
 $c-highlight: $trendyPink
 $c-subdue: darken( $quill, 25% )
+$c-text: $masala
+$c-text-heading: lighten( $c-text, 5% )
 $c-text-invert: $alabaster
 $c-text-invert-subdue: rgba( $c-text-invert, 0.65 )
-$c-text: $masala
 
 // ----- Components ----- //
 
