--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -135,9 +135,9 @@
 // ----- Lead ----- //
 
 .post-lead
+  color: $c-text-heading
   font-weight: $b-fontWeight-bold
   letter-spacing: 0.1em
-  opacity: 0.95
   text-transform: uppercase
 
 // ----- Sidenote ----- //
