Fix index latest post block-level link

--- a/source/index.haml
+++ b/source/index.haml
@@ -24,7 +24,8 @@ description: 'Front-end Developer at Code School'
 
           %p.label.label--inverted Latest Post
 
-          = link_to post.data.title, post.url, class: 'link link--inverted h2 db js-orphan'
+          .h2
+            = link_to post.data.title, post.url, class: 'link link--inverted js-orphan'
           %p.js-orphan= post.data.description
 
           = link_to 'Read It', post.url, class: 'btn'
