--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -26,8 +26,9 @@
               .well.well--l.mbxl--m.prs--l
                 .cell.cell--s
 
-                  = find_and_preserve do
-                    = yield
+                  .post-content
+                    = find_and_preserve do
+                      = yield
 
             .g-b.g-b--l--1of3.sector-item.sector-item--b.sector-item--b--invert.dn.db--l
               .well.well--l.mbxl--m
