Fix media Link child SVG state
Closes #6

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -50,7 +50,7 @@
     transition: 0.15s steps( #{ strip-units( $link-borderWidth ) } )
     width: 100%
 
-  > img
+  > img, svg
     transition: $b-transition
 
   +state
@@ -58,7 +58,7 @@
     &::before
       border-bottom-width: $link-borderWidth
 
-    > img
+    > img, svg
       opacity: 0.75
 
 // Inverted
@@ -70,5 +70,5 @@
 
   +state
 
-    > img
+    > img, svg
       opacity: 0.5
