--- a/source/assets/stylesheets/structures/_label.sass
+++ b/source/assets/stylesheets/structures/_label.sass
@@ -16,8 +16,8 @@
   color: $label-color
   display: block
   font-family: $b-fontFamily-mono
-  font-weight: $b-fontWeight-bold
-  letter-spacing: em( 2px )
+  font-weight: $b-fontWeight-normal
+  letter-spacing: em( 3px )
   text-transform: uppercase
 
 // -------------------------------------
