Reduce index latest post label bottom margin

--- a/source/index.haml
+++ b/source/index.haml
@@ -22,7 +22,7 @@ description: 'Front-end Developer at Code School'
         .well.well--l.well--m--xl.plm--m
           - post = get_posts().first
 
-          %p.label.label--inverted Latest Post
+          %p.label.label--inverted.mbs Latest Post
 
           .h2
             = link_to post.data.title, post.url, class: 'link link--inverted js-orphan'
