Specify h3 responsive font sizes

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -117,6 +117,8 @@ $b-fontSize-h1--m: 45px
 $b-fontSize-h1--l: 68px
 $b-fontSize-h2: 20px
 $b-fontSize-h2--m: 30px
+$b-fontSize-h3: 18px
+$b-fontSize-h3--m: 24px
 $b-fontWeight-normal: 400
 $b-fontWeight-bold: 600
 $b-lineHeight: 1.4
