--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -69,6 +69,9 @@ h2, .h2
   +respond-to( $g-m )
     letter-spacing: -1px
 
+h3, h3
+  +font-size( ( b: $b-fontSize-h3, m: $b-fontSize-h3--m ) )
+
 // -------------------------------------
 //   Inline Content
 // -------------------------------------
