Integrate footer icon styles

--- a/source/shared/_icon.haml
+++ b/source/shared/_icon.haml
@@ -6,5 +6,5 @@
 - unless defined? text
   %span.srt= name.humanize
 
-%svg{ width: width, height: height }
+%svg.icon{ width: width, height: height }
   %use{ 'xlink:href' => "#icon-#{name}" }
