--- a/source/shared/_footer.haml
+++ b/source/shared/_footer.haml
@@ -31,15 +31,15 @@
           %ul.list.list--object
             %li.list-item
               = link_to links.twitter, class: 'link link--inverted link--media link--media--inverted' do
-                = partial 'shared/icon', locals: { name: 'twitter' }
+                = icon 'twitter'
 
             %li.list-item
               = link_to links.github, class: 'link link--inverted link--media link--media--inverted' do
-                = partial 'shared/icon', locals: { name: 'github' }
+                = icon 'github'
 
             %li.list-item
               = link_to links.dribbble, class: 'link link--inverted link--media link--media--inverted' do
-                = partial 'shared/icon', locals: { name: 'dribbble' }
+                = icon 'dribbble'
 
     .bdrti.ptm
       %p.mbf.tss
