Fix typo on the most important text on my website
LOLOLOLOLOLOLOLOLOLOLOLOL

--- a/source/index.haml
+++ b/source/index.haml
@@ -13,7 +13,7 @@ description: 'Front-end Developer at Code School'
             = image_tag 'avatar.jpg', class: 'thumb dib mbs', width: 140, height: 140
             %span.label.label--inverted.mbf John D. Jameson
             %p
-              Front-end Devloper at
+              Front-end Developer at
               %span.db
                 = link_to 'Code School', links.codeschool,
                   class: 'link link--bordered link--inverted'
