Update base font-size variable names
Closes #7

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -109,20 +109,20 @@ $b-fontFamily: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'A
 $b-fontFamily-heading: $b-fontFamily
 $b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
-$b-fontSize--m: 20px
+$b-fontSize-b: 20px
 $b-fontSize-s: 14px
-$b-fontSize-s--m: 16px
+$b-fontSize-s-b: 16px
 $b-fontSize-h1: 30px
-$b-fontSize-h1--m: 45px
-$b-fontSize-h1--l: 68px
+$b-fontSize-h1-b: 45px
+$b-fontSize-h1-c: 68px
 $b-fontSize-h2: 20px
-$b-fontSize-h2--m: 30px
+$b-fontSize-h2-b: 30px
 $b-fontSize-h3: 18px
-$b-fontSize-h3--m: 24px
+$b-fontSize-h3-b: 24px
 $b-fontWeight-normal: 400
 $b-fontWeight-bold: 600
 $b-lineHeight: 1.4
-$b-lineHeight--m: 1.5
+$b-lineHeight-b: 1.5
 
 // ----- Sizing ----- //
 
@@ -175,7 +175,7 @@ $g-gutter: rem( 20px )
 // ----- Row ----- //
 
 $row-gutter: rem( 10px )
-$row-gutter--m: rem( 20px )
+$row-gutter-b: rem( 20px )
 
 // ----- Thumb ----- //
 
