--- a/source/assets/stylesheets/structures/_post.sass
+++ b/source/assets/stylesheets/structures/_post.sass
@@ -57,7 +57,7 @@
     +respond-to( $g-l )
       max-width: $b-maxWidth
       position: relative
-      width: calc( 100vw - #{ $row-gutter--m * 2 } )
+      width: calc( 100vw - #{ $row-gutter-b * 2 } )
       z-index: 1
 
   code, kbd
@@ -84,7 +84,7 @@
   position: relative
 
   +respond-to( $g-m )
-    line-height: percentage( $b-lineHeight--m )
+    line-height: percentage( $b-lineHeight-b )
 
 // ----- Sidenotes ----- //
 
