--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -17,8 +17,8 @@ html
 body
 
   +respond-to( $g-m )
-    font-size: percentage( $b-fontSize--m / $b-fontSize )
-    line-height: $b-lineHeight--m
+    font-size: percentage( $b-fontSize-b / $b-fontSize )
+    line-height: $b-lineHeight-b
 
 // -------------------------------------
 //   Block Content
@@ -50,7 +50,7 @@ h4, .h4
   margin-top: 0
 
 h1, .h1
-  +font-size( ( b: $b-fontSize-h1, m: $b-fontSize-h1--m, l: $b-fontSize-h1--l ) )
+  +font-size( ( b: $b-fontSize-h1, m: $b-fontSize-h1-b, l: $b-fontSize-h1-c ) )
   font-weight: $b-fontWeight-normal
   letter-spacing: 0.05em
   line-height: 1.05
@@ -64,13 +64,13 @@ h1, .h1
     letter-spacing: 0.125em
 
 h2, .h2
-  +font-size( ( b: $b-fontSize-h2, m: $b-fontSize-h2--m ) )
+  +font-size( ( b: $b-fontSize-h2, m: $b-fontSize-h2-b ) )
 
   +respond-to( $g-m )
     letter-spacing: -1px
 
 h3, h3
-  +font-size( ( b: $b-fontSize-h3, m: $b-fontSize-h3--m ) )
+  +font-size( ( b: $b-fontSize-h3, m: $b-fontSize-h3-b ) )
 
 // -------------------------------------
 //   Inline Content
