Add responsive Well component modifiers

--- a/source/assets/stylesheets/components/_well.sass
+++ b/source/assets/stylesheets/components/_well.sass
@@ -22,15 +22,35 @@
 
 // ----- Sizes ----- //
 
+// Small
+
+.well--s
+  margin-bottom: $b-space-s
+  margin-top: $b-space-s
+
+// Medium
+
+// Medium: Responsive
+
++respond-to( $g-m )
+
+  .well--m--m
+    margin-bottom: $b-space
+    margin-top: $b-space
+
+// Large
+
 .well--l
   margin-bottom: $b-space-l
   margin-top: $b-space-l
+
+// Extra Large
 
 .well--xl
   margin-bottom: $b-space-xl
   margin-top: $b-space-xl
 
-// Responive
+// Extra Large: Responive
 
 +respond-to( $g-m )
 
