--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -189,3 +189,8 @@ $thumb-borderRadius: 4px
 
 $link-borderStyle: solid
 $link-borderWidth: 2px
+
+// ----- Logo ----- //
+
+$logo-size: rem( 50px )
+$logo-size-b: rem( 60px )
