Fix inline SVG height in IE

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -93,9 +93,15 @@ code, kbd
   font-family: $b-fontFamily-mono
   word-spacing: 0
 
-// ----- Images ----- //
+// ----- Media ----- //
+
+// Shared
 
 img, svg
   max-width: 100%
   vertical-align: middle
+
+// Images
+
+img
   height: auto
