--- a/source/shared/_head.haml
+++ b/source/shared/_head.haml
@@ -9,3 +9,4 @@
   %link{ href: 'https://plus.google.com/u/0/113914298266231922059/posts', rel: 'author' }
 
   = stylesheet_link_tag 'application'
+  = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic|Source+Code+Pro:400'
