Move logo background color into asset
This prevents a flash of white on page load.

--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -4,7 +4,7 @@
     .split.split--center
       .split-cell
         = link_to '/index.html' do
-          = image_tag 'johndjameson-logo.svg', class: 'logo bcb'
+          = image_tag 'johndjameson-logo.svg', class: 'logo'
       .split-cell
         %p.mbf.tci.tss
           Built with
