Set up Normalize via Bower

--- a/source/assets/stylesheets/application.sass
+++ b/source/assets/stylesheets/application.sass
@@ -9,7 +9,8 @@
 //   Foundation
 // -------------------------------------
 
-@import 'foundation/reset'
+//= require normalize
+
 @import 'foundation/helpers'
 @import 'foundation/config'
 @import 'foundation/base'
