--- a/source/shared/_head.haml
+++ b/source/shared/_head.haml
@@ -3,7 +3,7 @@
   %meta{ content: 'IE=edge,chrome=1', 'http-equiv' => 'X-UA-Compatible' }
   %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
 
-  %title= "#{ current_page.data.title } | John D. Jameson"
+  %title= page_title
 
   %meta{ name: 'description', content: escape_html(current_page.data.description) }
   %link{ href: 'https://plus.google.com/u/0/113914298266231922059/posts', rel: 'author' }
