--- a/source/shared/_footer-scripts.haml
+++ b/source/shared/_footer-scripts.haml
@@ -1,5 +1,5 @@
-= javascript_include_tag 'vendor'
-= javascript_include_tag 'application'
+= javascript_include_tag 'vendor', defer: true
+= javascript_include_tag 'application', defer: true
 
 :javascript
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
