--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -15,7 +15,7 @@
 
       %section.row.has-sector
         .cell
-          %article.post.js-sidenotes{ role: 'article' }
+          %article.post.js-has-headingLink.js-sidenotes{ role: 'article' }
 
             .g.sector
               .g-b.g-b--l--2of3.sector-item.sector-item--a.sector-item--a--invert
