--- a/source/shared/_footer-scripts.haml
+++ b/source/shared/_footer-scripts.haml
@@ -1,4 +1,5 @@
 = javascript_include_tag 'vendor', defer: true
+= javascript_include_tag 'vendor-async', async: true
 = javascript_include_tag 'application', defer: true
 
 :javascript
