Update primary fallback font to Seravek

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -97,7 +97,7 @@ $b-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1)
 
 // ----- Typography ----- //
 
-$b-fontFamily: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$b-fontFamily: 'Source Sans Pro', 'Seravek', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontFamily-heading: $b-fontFamily
 $b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
