Set up Typekit script

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -97,11 +97,11 @@ $b-transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1)
 
 // ----- Typography ----- //
 
-$b-fontFamily: 'Source Sans Pro', 'Seravek', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$b-fontFamily: 'minion-pro', 'Athelas', 'Georgia', serif
 $b-fontFamily-heading: $b-fontFamily
 $b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
-$b-fontSize-b: 20px
+$b-fontSize-b: 24px
 $b-fontSize-s: 14px
 $b-fontSize-s-b: 16px
 $b-fontSize-h1: 30px
