--- a/source/shared/_footer-scripts.haml
+++ b/source/shared/_footer-scripts.haml
@@ -1,6 +1,15 @@
 = javascript_include_tag 'vendor', defer: true
-= javascript_include_tag 'vendor-async', async: true
 = javascript_include_tag 'application', defer: true
+
+:javascript
+  (function(d) {
+    var config = {
+      kitId: 'eck5bbb',
+      scriptTimeout: 3000,
+      async: true
+    },
+    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='//use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  })(document);
 
 :javascript
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
