--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -15,22 +15,6 @@
   background: $c-background-dark
 .bch
   background: $c-highlight
-.bcs
-  background: $c-subdue
-
-// ----- Palette ----- //
-
-.bc-balticSea
-  background: $balticSea
-
-// -------------------------------------
-//   Borders
-// -------------------------------------
-
-// ----- Invert ----- //
-
-.bdrti
-  border-top: $b-border-invert
 
 // -------------------------------------
 //   Display
@@ -225,45 +209,17 @@
 //   Text
 // -------------------------------------
 
-// ----- Alignment ----- //
-
-.tac
-  text-align: center
-
-// ----- Color ----- //
-
-.tch
-  color: $c-highlight
-.tci
-  color: $c-text-invert
-.tcis
-  color: $c-text-invert-subdue
-.tcs
-  color: $c-subdue
-.tct
-  color: $c-text
-
-// ----- Family ----- //
-
-.tfb
-  font-family: $b-fontFamily
-.tfh
-  font-family: $b-fontFamily-heading
-
 // ----- Size ----- //
 
 .tss
   +font-size('s')
+.tsl
+  +font-size('l')
 
 // ----- Style ----- //
 
 .tsi
   font-style: italic
-
-// ----- Transform ----- //
-
-.ttu
-  text-transform: uppercase
 
 // ----- Weight ----- //
 
