--- a/source/assets/stylesheets/components/_cell.sass
+++ b/source/assets/stylesheets/components/_cell.sass
@@ -7,7 +7,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// .cell[s]
+// .cell
 //   / ...
 //
 // *************************************
@@ -17,12 +17,3 @@
   margin-right: auto
   max-width: $b-maxWidth
   position: relative
-
-// -------------------------------------
-//   Modifiers
-// -------------------------------------
-
-// Sizes
-
-.cell--s
-  max-width: $b-maxWidth-s
