--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -7,26 +7,21 @@
 
     %main{ role: 'main' }
 
+      %p 2345678900000
+
       %section.row.bc-balticSea
-        .cell.well.well--l
-          %time.label.label--inverted.dib.mbm= pretty_date(current_page.data.date)
+        .cell.well.well--xl.mbf
+          -# %time.db.twb= pretty_date(current_page.data.date)
           %h1.tci{ class: ('js-orphan' unless current_page.data.allow_orphan) }= current_page.data.title
           %p.mbf.tcis.tsi.tsl.js-orphan= current_page.data.description
 
       %section.row.has-sector
         .cell
-          %article.post.js-has-headingLink.js-sidenotes{ role: 'article' }
+          %article.post.js-has-headingLink{ role: 'article' }
+            .well.well--l.mbxl--m.prs--l
+              .cell.cell--s
 
-            .g.sector
-              .g-b.g-b--l--2of3.sector-item.sector-item--a.sector-item--a--invert
-                .well.well--l.mbxl--m.prs--l
-                  .cell.cell--s
+                = find_and_preserve do
+                  = yield
 
-                    = find_and_preserve do
-                      = yield
-
-              .g-b.g-b--l--1of3.sector-item.sector-item--b.sector-item--b--invert.dn.db--l
-                .well.well--l.mbxl--m
-
-    = partial 'shared/footer'
     = partial 'shared/footer-scripts'
