Integrate partial interface

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -71,10 +71,8 @@ h3, h3
 
 // ----- Links ----- //
 
-a, %a
-  color: $link-color
-  font-weight: inherit
-  text-decoration: underline
+a
+  @extend %link
 
 // ----- Code ----- //
 
