--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -43,15 +43,15 @@ $b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courie
 $b-fontSize: 18px
 $b-fontSize-b: 24px
 $b-fontSize-s: 14px
-$b-fontSize-s-b: 16px
+$b-fontSize-s-b: 18px
 $b-fontSize-l: 24px
 $b-fontSize-l-b: 36px
-$b-fontSize-h1: 30px
-$b-fontSize-h1-b: 45px
+$b-fontSize-h1: 36px
+$b-fontSize-h1-b: 60px
 $b-fontSize-h1-c: 96px
-$b-fontSize-h2: 20px
-$b-fontSize-h2-b: 30px
-$b-fontSize-h3: 18px
+$b-fontSize-h2: 18px
+$b-fontSize-h2-b: 24px
+$b-fontSize-h3: 21px
 $b-fontSize-h3-b: 24px
 $b-fontWeight-normal: 400
 $b-fontWeight-bold: 700
@@ -61,7 +61,7 @@ $b-lineHeight-b: 1.375
 // ----- Sizing ----- //
 
 $b-maxWidth: rem(730px)
-$b-space: em(20px)
+$b-space: rem(28px)
 $b-space-xs: $b-space * 0.25
 $b-space-s: $b-space * 0.5
 $b-space-l: $b-space * 2
