Add Grid component scaffolding section heading

--- a/source/assets/stylesheets/components/_grid.sass
+++ b/source/assets/stylesheets/components/_grid.sass
@@ -28,6 +28,8 @@
 //   Scaffolding
 // -------------------------------------
 
+// ----- Box ----- //
+
 .g-b
   box-sizing: border-box
   margin: 0
