Update monospace font stack

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -39,7 +39,7 @@ $b-border: $b-borderWidth $b-borderStyle $c-border
 // ----- Typography ----- //
 
 $b-fontFamily: 'minion-pro', 'Athelas', 'Georgia', serif
-$b-fontFamily-mono: 'Source Code Pro', 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
+$b-fontFamily-mono: 'Menlo', 'Monaco', 'Andale Mono', 'Courier', 'Lucida Console', monospace
 $b-fontSize: 18px
 $b-fontSize-b: 24px
 $b-fontSize-s: 14px
