Update heading font sizes

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -48,9 +48,9 @@ $b-fontSize-l: 24px
 $b-fontSize-l-b: 36px
 $b-fontSize-h1: 36px
 $b-fontSize-h1-b: 60px
-$b-fontSize-h1-c: 96px
-$b-fontSize-h2: 24px
-$b-fontSize-h2-b: 36px
+$b-fontSize-h1-c: 90px
+$b-fontSize-h2: $b-fontSize-l
+$b-fontSize-h2-b: $b-fontSize-l-b
 $b-fontWeight-normal: 400
 $b-fontWeight-bold: 700
 $b-lineHeight: 1.375
