--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -22,7 +22,7 @@
 
 // ----- Underlined ----- //
 
-.link--underlined
+.link--underlined, %link--underlined
   $shadow-offset: 0.5px
   background-image: linear-gradient(to bottom, transparent 75%, currentColor 75%)
   background-position: 0 calc(100% - 0.25em)
