--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -1,12 +1,12 @@
 %header.row{ role: 'banner' }
   .cell.well.well--s.well--m--m
     .g
-      .g-b.g-b--3of4
+      .g-b.g-b--2of4.g-b--s--3of4
 
         = link_to '/index.html' do
           = image_tag 'johndjameson-logo.svg', class: 'logo'
 
-      .g-b.g-b--1of4.has-navigationTab
+      .g-b.g-b--1of2.g-b--s--1of4.has-navigationTab
 
         .navigationTab
           = link_to 'About', '/about.html', class: 'navigationTab-link'
