--- a/source/about.haml
+++ b/source/about.haml
@@ -9,47 +9,50 @@
         Are you available for hire?
         ---------------------------
 
-        Nope, I'm happily employed at #{ link_to 'Code School', data.links.codeschool }.
+        Nope, I'm keeping busy day to day over at ye olde
+        #{ link_to 'Code School', data.links.codeschool }.
 
         But if you're looking to hire a front-end developer, you might want to
-        check out #{ link_to 'Harry Roberts', data.links.csswizardry }. I
-        pretty much copy everything he does anyway.
+        check out #{ link_to 'Harry Roberts', data.links.csswizardry }. That
+        guy's awesome and I'll admit to copying pretty much everything he does
+        anyway.
 
         Is it true I can follow you on Twitter?
         ---------------------------------------
 
         You bet &mdash; I'm #{ link_to '@johndjameson', data.links.twitter }
-        over there.
+        over there. If you want to get in an argument about the merits of Adobe
+        Minion on my personal site, that'd be the place to do it.
 
-        What's your email address?
-        --------------------------
+        How many Star Wars audiobooks do you own?
+        -----------------------------------------
 
-        Get out of here, you dumb spam robot. And tell your friends to stop
-        screwing up my Google Analytics.
+        Five so far, and they're all on Sith Lords. It feels weird getting back
+        into Star Wars after the whole prequel fiasco, but listening to the
+        audiobooks has been _a lot_ of fun.
+
+        What's CSS and can I use it with WordPress?
+        -------------------------------------------
+
+        I heard React was good.
 
         Are you the same John who messaged me on OkCupid?
         -------------------------------------------------
 
-        You could've told me _over there_ that you found my website. I don't
-        really want everyone knowing about that. Good grief.
-
-        **Update** Never mind what I just said &mdash; I don't have an account anymore.
-
-        **Update #2** Never mind that never mind. I made a new account around
-        3:00 a.m. last night.
-
-        **Update #3** Okay, so I deleted that account, too. But, this time, I
-        _promise_ I won't be back.
+        That was supposed to be a secret! You could've told me over there that
+        you found my site. I don't really want _everyone_ knowing I made that
+        account.
 
         Nobody really asked these questions, did they?
         ----------------------------------------------
 
-        Oh hey, I remember you &mdash; you're the one who spoiled Santa Claus
-        for Marielle Molina in the 2nd grade.
-
-        Let me ask _you_ a question: why do you hate fun?
+        Hey, aren't you the one who spoiled Santa Claus for Marielle Molina in
+        the 2nd grade? Wow, it's been years since we last talked! How are
+        things?
 
         Anything else I should know about you?
         --------------------------------------
 
-        I don't have a sister named Jenna. Please stop asking.
+        I bought a lenticular poster of a bald eagle to hang on my bedroom
+        wall. It is, without a doubt, the _coolest thing_ I have ever owned.
+        Shout-out to kitschy museum gift shops.
