Style Article structure kbd elements

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -46,7 +46,7 @@
     @extend %link
     @extend %link--underlined
 
-  code
+  code, kbd
     +font-size('s')
 
 // -------------------------------------
