Convert letterspacing ch units to em
Ch units can be too unpredictable, given the fallback font stack.

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -48,7 +48,7 @@ h4, .h4
 h1, .h1
   +font-size(( b: $b-fontSize-h1, m: $b-fontSize-h1-b, l: $b-fontSize-h1-c ))
   font-weight: $b-fontWeight-bold
-  letter-spacing: -0.04ch
+  letter-spacing: -0.02em
   line-height: 1
 
 h2, .h2
