--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -10,7 +10,10 @@
         .cell.well.well--l
 
           %h1{ class: ('js-orphan' unless current_page.data.allow_orphan) }= current_page.data.title
-          %p.lead.mbl.js-orphan= current_page.data.description
+
+          .lead.mbl.js-ophan
+            :markdown
+              #{ current_page.data.description }
 
           = find_and_preserve do
             = yield
