--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -48,9 +48,10 @@ h4, .h4
 h1, .h1
   +font-size(( b: $b-fontSize-h1, m: $b-fontSize-h1-b, l: $b-fontSize-h1-c ))
   font-weight: $b-fontWeight-bold
-  letter-spacing: -0.02em
+  letter-spacing: -0.025em
   line-height: 1
   margin-bottom: $b-space-s
+  word-spacing: -0.03em
 
   +respond-to($g-l)
     margin-bottom: $b-space
