--- a/source/about.haml
+++ b/source/about.haml
@@ -12,43 +12,30 @@
         Nope, I'm keeping busy day to day over at ye olde
         #{ link_to 'Code School', data.links.codeschool }.
 
-        But if you're looking to hire a front-end developer, you might want to
-        check out #{ link_to 'Harry Roberts', data.links.csswizardry }. That
-        guy's awesome and I'll admit to copying pretty much everything he does
-        anyway.
-
-        Is it true I can follow you on Twitter?
-        ---------------------------------------
+        Is it true I can talk to you on Twitter?
+        ----------------------------------------
 
         You bet &mdash; I'm #{ link_to '@johndjameson', data.links.twitter }
-        over there. If you want to get in an argument about the merits of Adobe
-        Minion on my personal site, that'd be the place to do it.
+        over there. If you have feedback on an article or suggestions for a
+        future topic, Twitter's the best place to start a conversation with me.
 
         How many Star Wars audiobooks do you own?
         -----------------------------------------
 
-        Five so far, and they're all on Sith Lords. It feels weird getting back
-        into Star Wars after the whole prequel fiasco, but listening to the
-        audiobooks has been _a lot_ of fun.
+        Five so far, and they're all on Sith Lords. It feels strange getting
+        back into Star&nbsp;Wars after the whole prequel fiasco, but listening
+        to the audiobooks has been _a lot_ of fun.
 
-        What's CSS and can I use it with WordPress?
-        -------------------------------------------
+        What do you think of&thinsp;&hellip;
+        ------------------------------------
 
-        I heard React was good.
-
-        Are you the same John who messaged me on OkCupid?
-        -------------------------------------------------
-
-        That was supposed to be a secret! You could've told me over there that
-        you found my site. I don't really want _everyone_ knowing I made that
-        account.
+        It depends.
 
         Nobody really asked these questions, did they?
         ----------------------------------------------
 
-        Hey, aren't you the one who spoiled Santa Claus for Marielle Molina in
-        the 2nd grade? Wow, it's been years since we last talked! How are
-        things?
+        Hey, I remember you &mdash; you're the one who spoiled Santa Claus for
+        Marielle Molina in the 2nd grade!
 
         Anything else I should know about you?
         --------------------------------------
